# deeplearning_ai_courses

./: .gitignore  .pylintrc  requirements.txt
2024_langgraph_tutorials/: p1_build_basic_chatbot.ipynb  p2_ToolNode_Add_search_function.ipynb  p3_adding_memory_to_chatbot.ipynb  p5_manually_updating_the_state.ipynb  requirements.txt
2025_learning_to_build_agentic_ai_with_andrew_ng/reflection/chart_generation/: .coverage  .cursorrules  README.md  env.example  pyproject.toml
2025_learning_to_build_agentic_ai_with_andrew_ng/reflection/chart_generation/__context/: agent_diagram.md  case1.md  design.md
2025_learning_to_build_agentic_ai_with_andrew_ng/reflection/chart_generation/src/: __init__.py  config.py
2025_learning_to_build_agentic_ai_with_andrew_ng/reflection/chart_generation/src/agents/: __init__.py  critic.py  generator.py  orchestrator.py
2025_learning_to_build_agentic_ai_with_andrew_ng/reflection/chart_generation/src/cli/: __init__.py  main.py
2025_learning_to_build_agentic_ai_with_andrew_ng/reflection/chart_generation/src/executor/: __init__.py  code_executor.py
2025_learning_to_build_agentic_ai_with_andrew_ng/reflection/chart_generation/src/utils/: __init__.py  data_schema.py  prompt_templates.py
2025_learning_to_build_agentic_ai_with_andrew_ng/reflection/chart_generation/tests/: __init__.py  conftest.py
2025_learning_to_build_agentic_ai_with_andrew_ng/reflection/chart_generation/tests/e2e/: __init__.py  test_chart_generation.py  test_reflection_flow.py
2025_learning_to_build_agentic_ai_with_andrew_ng/reflection/chart_generation/tests/mocks/: __init__.py  adk_mocks.py
2025_learning_to_build_agentic_ai_with_andrew_ng/reflection/chart_generation/tests/unit/: __init__.py  test_cli.py  test_critic.py  test_data_schema.py  test_executor.py  test_generator.py  test_orchestrator.py
2026_learning_to_build_agentic_ai_with_andrew_ng/reflection/essay-composer/: .cursorrules  README.md  essay_composer.py  llm_client.py  pyproject.toml  requirements.txt
2026_learning_to_build_agentic_ai_with_andrew_ng/reflection/essay-composer/.cursor/commands/: speckit.specify.md
2026_learning_to_build_agentic_ai_with_andrew_ng/reflection/essay-composer/__context__/: bugfix.md  planning.md
2026_learning_to_build_agentic_ai_with_andrew_ng/reflection/essay-composer/__context__/specs/002-check/: plan.md  quickstart.md  tasks.md
2026_learning_to_build_agentic_ai_with_andrew_ng/reflection/essay-composer/__context__/specs/002-check/checklists/: requirements.md
2026_learning_to_build_agentic_ai_with_andrew_ng/reflection/essay-composer/agents/: essay_generator.py  orchestrator.py  reflector.py  reviser.py
2026_learning_to_build_agentic_ai_with_andrew_ng/reflection/essay-composer/src/: essay_composer.py  llm_client.py  prompts.py
2026_learning_to_build_agentic_ai_with_andrew_ng/reflection/essay-composer/src/agents/: essay_generator.py  reflector.py  reviser.py
2026_learning_to_build_agentic_ai_with_andrew_ng/reflection/essay-composer/tests/: __init__.py  test_adk_agents.py  test_essay_composer.py  test_llm_client.py  test_prompts.py
2026_learning_to_build_agentic_ai_with_andrew_ng/reflection/essay-composer/tests/e2e/: test_cli_e2e.py  test_essay_composer_e2e.py
2026_learning_to_build_agentic_ai_with_andrew_ng/reflection/essay-composer/tests/integration/: test_agent_integration.py
2026_learning_to_build_agentic_ai_with_andrew_ng/reflection/essay-composer/tests/unit/: test_agents_unit.py  test_llm_client_unit.py  test_prompts_unit.py
google_agent_development_kit/mock_weather_agent/: .gitignore  README.md  __init__.py  agent.py  api.sh  callbacks.py  env.example  insturction.md  learning_note.md  learning_notes.md  pyproject.toml  tools.py
google_agent_development_kit/mock_weather_agent/doc_learning_note/: learning_notes_cn.md
google_agent_development_kit/mock_weather_agent/scripts/: demo.py  deploy.py  run_fastapi.py  run_flask.py
google_agent_development_kit/mock_weather_agent/src/weather_bot/: __init__.py
google_agent_development_kit/mock_weather_agent/src/weather_bot/adk_integration/: __init__.py  session.py
google_agent_development_kit/mock_weather_agent/src/weather_bot/core/: __init__.py  agents.py  callbacks.py  config.py  tools.py
google_agent_development_kit/mock_weather_agent/src/weather_bot/services/: __init__.py  cli.py  fastapi_app.py  flask_app.py
google_agent_development_kit/mock_weather_agent/tests/: __init__.py  test_agents.py  test_services.py  test_tools.py
google_agent_development_kit/mock_weather_agent/weather_agent/: __init__.py  agent.py  callbacks.py  config.py  main.py  sub_agents.py  tools.py  utils.py
google_agent_development_kit/mock_weather_agent/weather_agent_adk/: __init__.py
langgraph_tutorials/: README.md  (+7 more)
(+105 files in other folders)
